tests/checker/diagnostics/0687_fcm_local_abstract_wrong_arg_03.ml.infer.expected
File "0687_fcm_local_abstract_wrong_arg_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0687_fcm_local_abstract_wrong_arg_03 is not a valid module name.

File "0687_fcm_local_abstract_wrong_arg_03.ml", line 14, characters 64-68:
14 | let _ = use_gamma (module M_gamma : Id_gamma with type t = int) true
                                                                     ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
